# mini-pgw

./: CMakeLists.txt  README.md  build.sh  postman_collection.json  test.sh
configs/: pgw_client_conf.json  pgw_server_conf.json
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  imsi_to_bcd.cpp  imsi_to_bcd.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
tests/: CMakeLists.txt  imsi_bcd_test.cpp  server_test.cpp
